<resources>
    <string name="app_name">Speed Cooking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle" translatable="false"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="language_title">Change language</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="upload_picture_text">Upload Image</string>
    <string name="ingredients_text">Ingredients:</string>
    <string name="add_more_ingredient_text">Add More Ingredient</string>
    <string name="recipe_name_text">Recipe Name</string>
    <string name="description_procedures_text">Description/Procedures</string>
    <string name="save_text">Save</string>
    <string name="upload_image_content_desc">Upload Image</string>
    <string name="dash_text_ingredient_input" translatable="false">-</string>
    <string name="ingredient_hint_input">ingredient</string>
    <string name="food_preview">food preview</string>
    <string name="best_record_text">Best record:</string>
    <string name="history_text">History:</string>
    <string name="start_button_text">Start</string>
    <string name="pause_button_text">Pause</string>
    <string name="reset_button_text">Reset</string>
    <string name="save_button_text">Save</string>
    <string name="init_stopwatch" translatable="false">00:00:00 000</string>
    <string name="about_me_title">About Me</string>
    <string name="toast_image_saved">Saved to gallery</string>
    <string name="english_language">English</string>
    <string name="back_text">Back</string>
    <string name="share_text">Share</string>
    <string name="save_to_gallery_text">Save To Gallery</string>
    <string name="choose_an_app">Choose an app</string>
    <string name="reason_write_permission">we ask for permission to access your storage so you can save your cooking moments</string>
    <string name="empty_string" translatable="false" />
    <string name="only_wifi">this about page can only be used using wifi</string>
    <string name="have_network_connection_q">do you have any network connection?</string>
    <string name="notif_stopwatch_title">Ah, too bad</string>
    <string name="notif_stopwatch_content">looks like you failed to beat your best record</string>
</resources>