<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DAFAFAF"
        android:gravity="center_horizontal"
        android:padding="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:foregroundGravity="center_horizontal">

            <ImageView
                android:id="@+id/preview_layout"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                app:layout_constraintBottom_toTopOf="@+id/share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_menu_gallery" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_text"
                app:layout_constraintEnd_toStartOf="@+id/share"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/share" />

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_to_gallery"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toBottomOf="@+id/preview_layout" />

            <Button
                android:id="@+id/save_to_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_gallery_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/share"
                app:layout_constraintTop_toTopOf="@+id/share" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>